[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "reverseyara"
version = "0.2alpha"
description = "A tool for reversing YARA signatures."
authors = [
    { name = "Persistent Security Industries", email = "info@persistent-security.net" }
]
readme = "README.md"
license = { file = "LICENSE" }
dependencies = [
    "plyara",
    "rich"
]
